# Flask-Quotes

./: example.env  fill_db.py  main.py  pyproject.toml
database/: db.py  repository.py
